[gd_scene load_steps=3 format=3 uid="uid://blpi4x6if673v"]

[ext_resource type="Script" path="res://enemy/enemy.gd" id="1_xa7a1"]
[ext_resource type="Script" path="res://enemy/enemy_player_detection.gd" id="2_3ihdi"]

[node name="BaseEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_xa7a1")

[node name="PlayerDetectionComponent" type="Node2D" parent="."]
script = ExtResource("2_3ihdi")

[node name="DetectionRaycast" type="RayCast2D" parent="PlayerDetectionComponent"]
target_position = Vector2(0, 0)
collision_mask = 3
hit_from_inside = true

[connection signal="player_detected" from="PlayerDetectionComponent" to="PlayerDetectionComponent" method="_on_player_detected"]
